--- a/index.html
+++ b/index.html
@@ -56,6 +56,23 @@
       <input class="cta-form-input" type="url" name="url" placeholder="Shorten a link here..." required>
       <button class="button button-primery" type="submit">shorten it!</button>
   </div>
+  <ul class="cta-form-lists visually-hidden">
+    <li class="cta-form-item">
+      <span class="cta-form-url-text">https://www.frontendmentor.io</span>
+      <span class="cta-form-url-text cta-form-text">https://rel.ink/k4lKyk</span>
+       <button class="button button-copy" typy=button>copy</button>
+    </li>
+    <li class="cta-form-item">
+      <span class="cta-form-url-text">https://twitter.com/frontendmentor</span>
+      <span class="cta-form-url-text cta-form-text">https://rel.ink/gxOXp9</span>
+       <button class="button button-copy" typy=button>copy</button>
+    </li>
+    <li class="cta-form-item">
+      <span class="cta-form-url-text">https://www.linkedin.com/company/frontend-mentor</span>
+      <span class="cta-form-url-text cta-form-text">https://rel.ink/gob3X9</span>
+       <button class="button-copy" typy=button>copy</button>
+    </li>
+  </ul>
 </form>
   <h2 class="cta-header">Advanced Statistics</h2>
   <p class="cta-text">Track how your links are performing across the web with our advanced statistics dashboard.</p>
