correct hero img

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
      <p class="site-hero-text">Build your brand’s recognition and get detailed insights on how your links are performing.</p>
      <a class="button" href="#">get started</a>
     </div>
-    <img class="site-hero-img" src="img/hero-bg.svg" alt="" width="733" height="482">
    </section>
   </div>
   <!-- CTA -->
@@ -60,17 +59,17 @@
     <li class="cta-form-item">
       <span class="cta-form-url-text">https://www.frontendmentor.io</span>
       <span class="cta-form-url-text cta-form-text">https://rel.ink/k4lKyk</span>
-       <button class="button button-copy" typy=button>copy</button>
+       <button class="button button-copy" type="button">copy</button>
     </li>
     <li class="cta-form-item">
       <span class="cta-form-url-text">https://twitter.com/frontendmentor</span>
       <span class="cta-form-url-text cta-form-text">https://rel.ink/gxOXp9</span>
-       <button class="button button-copy" typy=button>copy</button>
+       <button class="button button-copy" type="button">copy</button>
     </li>
     <li class="cta-form-item">
       <span class="cta-form-url-text">https://www.linkedin.com/company/frontend-mentor</span>
       <span class="cta-form-url-text cta-form-text">https://rel.ink/gob3X9</span>
-       <button class="button-copy" typy=button>copy</button>
+       <button class="button-copy" type="button">copy</button>
     </li>
   </ul>
 </form>
